<resources>
    <string name="app_name">MyHomePage</string>
    <string name="find">Find</string>
    <string name="reset">Reset</string>
    <string name="your_new_home_is_waiting_to_be_found_by_using">YOUR new Home is waiting to be found by using</string>
    <string name="price_range">Price Range</string>
    <string name="where_do_you_search">Where do you search?</string>
    <string name="living_space_range">Living Space Range:</string>
    <string name="title_activity_login">MyHomePage</string>
    <string name="myhomepage">My HOMEpage</string>
    <string name="searchplace">SearchPlace</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to register -->
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email address</string>
    <string name="action_submit">Submit</string>

    <!-- Strings related to search -->
    <string name="cost">cost :</string>
    <string name="size">Size :</string>
    <string name="room">Room :</string>
    <string name="location">Location :</string>
    <string name="adresse">Adresse :</string>
    <string name="built_at">Built at :</string>
    <string name="Logout">logout</string>
    <string name="Home">Home</string>
    <string name="Agencies">agencies</string>
    <item name="btn_search" type="id" />
</resources>
